[Python3] Replace pygts by Vaclav (woodem) one.

--- a/py/CMakeLists.txt
+++ b/py/CMakeLists.txt
@@ -5,7 +5,7 @@ IF(ENABLE_GTS)
     MESSAGE(STATUS "Use system gts version")
   ELSE (PY_gts)
     MESSAGE(STATUS "Use embedded version of gts. Please, consider installing the corresponding package")
-    FILE(GLOB SRC_PYGTS "${CMAKE_CURRENT_SOURCE_DIR}/3rd-party/pygts-0.3.1/*.c")
+    FILE(GLOB SRC_PYGTS "${CMAKE_CURRENT_SOURCE_DIR}/3rd-party/pygts-0.3.1/*.cpp")
     ADD_LIBRARY(_gts SHARED ${SRC_PYGTS})
     SET_TARGET_PROPERTIES(_gts PROPERTIES PREFIX "")
     TARGET_LINK_LIBRARIES(_gts gts)
