--- a/py/__init__.py.in
+++ b/py/__init__.py.in
@@ -58,14 +58,14 @@ for root,dirs,files in os.walk(config.libDir):
 		#if not config.debug and '/dbg/' in root: continue
 		if not (f.startswith('lib') and f.endswith('.so')): continue
 		plugin=os.path.join(config.libDir,root,f)
-		plugins.append(plugin.encode("utf8"))
+		plugins.append(plugin)
 if 'YADE_DEBUG' in os.environ:
 	print('The following plugins will be loaded:')
 	for p in plugins: print('\t'+p)
 
 # c++ initialization code
 import boot
-boot.initialize(plugins,config.confDir.encode("utf8"))
+boot.initialize(plugins,config.confDir)
 import system
 
 # create proxies for deprecated classes
@@ -95,16 +95,14 @@ __builtin__.__dict__['Omega'] = wrapper.Omega
 # define a default list of engine
 O.engines=[
 		ForceResetter(),
-		InsertionSortCollider([Bo1_Sphere_Aabb(),Bo1_Facet_Aabb(),Bo1_Box_Aabb()],label=b"collider"),
+		InsertionSortCollider([Bo1_Sphere_Aabb(),Bo1_Facet_Aabb(),Bo1_Box_Aabb()],label="collider"),
 		InteractionLoop(
 			[Ig2_Sphere_Sphere_ScGeom(),Ig2_Facet_Sphere_ScGeom(),Ig2_Box_Sphere_ScGeom()],
 			[Ip2_FrictMat_FrictMat_FrictPhys()],	#for linear model only
-			[Law2_ScGeom_FrictPhys_CundallStrack(label=b"law")],	#for linear model only
-			label=b"interactionLoop"
+			[Law2_ScGeom_FrictPhys_CundallStrack(label="law")],	#for linear model only
+			label="interactionLoop"
 		),
-		GlobalStiffnessTimeStepper(timeStepUpdateInterval=10,label=b"timeStepper"),
-		NewtonIntegrator(label=b"newton")
+		GlobalStiffnessTimeStepper(timeStepUpdateInterval=10,label="timeStepper"),
+		NewtonIntegrator(label="newton")
 	]
 
-# Fix for Python2 to Python2&3 using "from __future__ import unicode_literals. Without this, all "from yade import *" will fail with "TypeError: Item in ``from list'' must be str, not unicode":
-__all__=[i.encode("utf8") for i in __all__]
