[Python3] Rename iterators "next()" python binding to "__next__()". Also assure python2 compatibility with bindings.
Concerned iterators: BodyIterator,InteractionIterator,SpherePackIterator.

--- a/py/__init__.py.in
+++ b/py/__init__.py.in
@@ -76,6 +76,12 @@ from yade.wrapper import *
 # import to separate namespace to be able to call dir(miniEigen) and dir(wrapper) below
 import yade.wrapper 
 
+# bindings for python2 retro-compatibility:
+yade.wrapper.BodyIterator.next=yade.wrapper.BodyIterator.__next__
+yade.wrapper.InteractionIterator.next=yade.wrapper.InteractionIterator.__next__
+from yade import pack
+pack.SpherePackIterator.next=pack.SpherePackIterator.__next__
+
 # out-of-class docstrings for some classes
 import yade._extraDocs
 # import a few "important" modules along with *
