--- a/py/__init__.py.in
+++ b/py/__init__.py.in
@@ -19,6 +19,8 @@ standard_library.install_aliases()
 import ctypes,sys,os
 print("Using python version:",sys.version)
 
+sys.path.insert(2,os.path.realpath(__file__).rsplit("/",1)[0])
+
 sys.setdlopenflags(os.RTLD_NOW | os.RTLD_GLOBAL)
 
 # important: initialize c++ by importing libstdc++ directly
@@ -106,4 +108,3 @@ O.engines=[
 		GlobalStiffnessTimeStepper(timeStepUpdateInterval=10,label="timeStepper"),
 		NewtonIntegrator(label="newton")
 	]
-
