--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,14 +28,51 @@
 #  VECTORIZE: enables vectorization and alignment in Eigen3 library, experimental (OFF by default)
 #  USE_QT5: use QT5 for GUI (ON by default)
 #  CHOLMOD_GPU link Yade to custom SuiteSparse installation and activate GPU accelerated PFV (OFF by default)
-#  ENABLE_MPI : Enable MPI communications in Yade. Used for Yade-OpenFOAM coupling.
+#  ENABLE_PYTHON3: enable python 3 compilation instead of python2.7 (OFF by default)
 
 project(Yade C CXX)
 cmake_minimum_required(VERSION 2.8.11)
 
+
+#===========================================================
+SET(DEFAULT ON CACHE INTERNAL "Default value for enabled by default options")
+SET(LINKLIBS "")
+SET(CONFIGURED_FEATS "")
+SET(DISABLED_FEATS "")
+
+OPTION(ENABLE_VTK "Enable VTK" ${DEFAULT})
+OPTION(ENABLE_OPENMP "Enable OpenMP" ${DEFAULT})
+OPTION(ENABLE_GTS "Enable GTS" ${DEFAULT})
+OPTION(ENABLE_GUI "Enable GUI" ${DEFAULT})
+OPTION(ENABLE_CGAL "Enable CGAL" ${DEFAULT})
+OPTION(ENABLE_GL2PS "Enable GL2PS" ${DEFAULT})
+OPTION(ENABLE_LINSOLV "Enable direct solver for the flow engines (experimental)" ${DEFAULT})
+OPTION(ENABLE_PFVFLOW "Enable one-phase flow engines" ${DEFAULT})
+OPTION(ENABLE_TWOPHASEFLOW "Enable two-phase flow engines" ${DEFAULT})
+OPTION(ENABLE_SPH "Enable SPH" OFF)
+OPTION(ENABLE_LBMFLOW "Enable LBM engine (very experimental)" ON)
+OPTION(ENABLE_LIQMIGRATION "Enable liquid control (very experimental), see [Mani2013] for details" OFF)
+OPTION(ENABLE_MASK_ARBITRARY "Enable arbitrary precision of bitmask variables (only Body::groupMask yet implemented) (experimental). Use -DMASK_ARBITRARY_SIZE=int to set number of used bits (256 by default)" OFF)
+OPTION(ENABLE_PROFILING "Enable profiling, e.g. shows some more metrics, which can define bottlenecks of the code (OFF by default)" OFF)
+OPTION(ENABLE_POTENTIAL_PARTICLES "Enable potential particles" OFF)
+OPTION(ENABLE_OAR "Generate script for oar-based task scheduler" OFF)
+OPTION(USE_QT5 "USE Qt5 for GUI" ON)
+OPTION(ENABLE_POTENTIAL_BLOCKS "Enable PotentialBlocks" OFF)
+OPTION(ENABLE_DEFORM "Enable Deformation Engine" OFF)
+OPTION(CHOLMOD_GPU "Enable GPU acceleration flow engine direct solver" OFF)
+OPTION(ENABLE_THERMAL "Enable thermal engine (experimental)" OFF)
+OPTION(USE_PYTHON3 "enable python 3 compilation instead of python2.7" ON)
+#===========================================================
+
 set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cMake")
 
-set(Python_ADDITIONAL_VERSIONS 3)
+IF(USE_PYTHON3)
+SET(PYTHON_MAJOR 3)
+ELSE()
+SET(PYTHON_MAJOR 2)
+ENDIF()
+
+set(Python_ADDITIONAL_VERSIONS ${PYTHON_MAJOR})
 INCLUDE(FindPythonInterp)
 INCLUDE(FindOpenMP)
 INCLUDE(FindQt4)
@@ -101,7 +138,13 @@ ENDIF (DEBUG)
 IF ( NOT LocalBoost )
   SET(LocalBoost "1.47.0") # Minimal required Boost version
 ENDIF ( NOT LocalBoost )
-FIND_PACKAGE(Boost ${LocalBoost} COMPONENTS python3 thread filesystem iostreams regex serialization system date_time REQUIRED)
+
+IF(USE_PYTHON3)
+  FIND_PACKAGE(Boost ${LocalBoost} COMPONENTS python3 thread filesystem iostreams regex serialization system date_time REQUIRED)
+ELSE()
+  FIND_PACKAGE(Boost ${LocalBoost} COMPONENTS python thread filesystem iostreams regex serialization system date_time REQUIRED)
+ENDIF()
+
 INCLUDE_DIRECTORIES (${Boost_INCLUDE_DIRS})
 # for checking purpose
 MESSAGE("--   Boost_VERSION: " ${Boost_VERSION})
@@ -121,39 +164,10 @@ FIND_PACKAGE(Eigen3 REQUIRED)
 FIND_PACKAGE(BZip2 REQUIRED)
 FIND_PACKAGE(ZLIB REQUIRED)
 
-#SET(Python_ADDITIONAL_VERSIONS 2.7)
 FIND_PACKAGE(PythonLibs REQUIRED)
 INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
 #===========================================================
 
-SET(DEFAULT ON CACHE INTERNAL "Default value for enabled by default options")
-SET(LINKLIBS "")
-SET(CONFIGURED_FEATS "")
-SET(DISABLED_FEATS "")
-
-OPTION(ENABLE_VTK "Enable VTK" ${DEFAULT})
-OPTION(ENABLE_OPENMP "Enable OpenMP" ${DEFAULT})
-OPTION(ENABLE_GTS "Enable GTS" ${DEFAULT})
-OPTION(ENABLE_GUI "Enable GUI" ${DEFAULT})
-OPTION(ENABLE_CGAL "Enable CGAL" ${DEFAULT})
-OPTION(ENABLE_GL2PS "Enable GL2PS" ${DEFAULT})
-OPTION(ENABLE_LINSOLV "Enable direct solver for the flow engines (experimental)" ${DEFAULT})
-OPTION(ENABLE_PFVFLOW "Enable one-phase flow engines" ${DEFAULT})
-OPTION(ENABLE_TWOPHASEFLOW "Enable two-phase flow engines" ${DEFAULT})
-OPTION(ENABLE_SPH "Enable SPH" OFF)
-OPTION(ENABLE_LBMFLOW "Enable LBM engine (very experimental)" ON)
-OPTION(ENABLE_LIQMIGRATION "Enable liquid control (very experimental), see [Mani2013] for details" OFF)
-OPTION(ENABLE_MASK_ARBITRARY "Enable arbitrary precision of bitmask variables (only Body::groupMask yet implemented) (experimental). Use -DMASK_ARBITRARY_SIZE=int to set number of used bits (256 by default)" OFF)
-OPTION(ENABLE_PROFILING "Enable profiling, e.g. shows some more metrics, which can define bottlenecks of the code (OFF by default)" OFF)
-OPTION(ENABLE_POTENTIAL_PARTICLES "Enable potential particles" OFF)
-OPTION(ENABLE_OAR "Generate script for oar-based task scheduler" OFF)
-OPTION(USE_QT5 "USE Qt5 for GUI" ON)
-OPTION(ENABLE_POTENTIAL_BLOCKS "Enable PotentialBlocks" OFF)
-OPTION(ENABLE_DEFORM "Enable Deformation Engine" OFF)
-OPTION(CHOLMOD_GPU "Enable GPU acceleration flow engine direct solver" OFF)
-OPTION(ENABLE_THERMAL "Enable thermal engine (experimental)" OFF)
-OPTION(ENABLE_MPI "Enable MPI environement and communications, required for coupling Yade with OpenFOAM  " OFF)
-#===========================================================
 # Use Eigen3 by default
 IF (EIGEN3_FOUND)
   INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR})
@@ -597,7 +611,11 @@ ENDIF (CHUNKSIZE)
 #===========================================================
 find_python_module(minieigen REQUIRED)
 
+IF(USE_PYTHON3)
 find_python_module(tkinter REQUIRED)
+ELSE()
+find_python_module(Tkinter REQUIRED)
+ENDIF()
 #===========================================================
 
 ADD_LIBRARY(boot SHARED ${CMAKE_CURRENT_SOURCE_DIR}/core/main/pyboot.cpp)
