[Python3] Start to fix python2 with: builtins import, XMLRSPServer import, ld/DLFCN import

--- a/py/__init__.py.in
+++ b/py/__init__.py.in
@@ -18,7 +18,21 @@ standard_library.install_aliases()
 import ctypes,sys,os
 print("Using python version:",sys.version)
 
-sys.setdlopenflags(os.RTLD_NOW | os.RTLD_GLOBAL)
+if(sys.version_info[0]<3):
+	try:
+		import dl
+	except ImportError:
+		import DLFCN as dl
+	if True: # not eval('${mono}'):
+		# see file:///usr/share/doc/python2.6/html/library/sys.html#sys.setdlopenflags
+		# and various web posts on the topic, e.g.
+		# * http://gcc.gnu.org/faq.html#dso
+		# * http://www.code-muse.com/blog/?p=58
+		# * http://wiki.python.org/moin/boost.python/CrossExtensionModuleDependencies
+		sys.setdlopenflags(dl.RTLD_NOW | dl.RTLD_GLOBAL)
+	else: sys.setdlopenflags(dl.RTLD_NOW)
+else:
+	sys.setdlopenflags(os.RTLD_NOW | os.RTLD_GLOBAL)
 
 # important: initialize c++ by importing libstdc++ directly
 # see http://www.abclinuxu.cz/poradna/programovani/show/286322
@@ -51,7 +65,7 @@ for root,dirs,files in os.walk(config.libDir):
 		if not (f.startswith('lib') and f.endswith('.so')): continue
 		plugin=os.path.join(config.libDir,root,f)
 		plugins.append(plugin)
-#if 'YADE_DEBUG' in os.environ:
+if 'YADE_DEBUG' in os.environ:
 	print('The following plugins will be loaded:')
 	for p in plugins: print('\t'+p)
 
@@ -87,7 +101,10 @@ __all__+=['utils',]+dir(wrapper)
 
 
 # make O and wrapper.Omega part of __builtin__ (equvialent to global)
-import builtins
+if(sys.version_info[0]<3):
+	import __builtin__ as builtins
+else:
+	import builtins
 builtins.__dict__['O'] = O
 builtins.__dict__['Omega'] = wrapper.Omega
 # define a default list of engine
