[Python3] This should fix python version selection for cmake<=3.7

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -139,11 +139,7 @@ IF ( NOT LocalBoost )
   SET(LocalBoost "1.47.0") # Minimal required Boost version
 ENDIF ( NOT LocalBoost )
 
-IF(USE_PYTHON3)
-  FIND_PACKAGE(Boost ${LocalBoost} COMPONENTS python3 thread filesystem iostreams regex serialization system date_time REQUIRED)
-ELSE()
-  FIND_PACKAGE(Boost ${LocalBoost} COMPONENTS python thread filesystem iostreams regex serialization system date_time REQUIRED)
-ENDIF()
+FIND_PACKAGE(Boost ${LocalBoost} COMPONENTS python-py${PYTHON_VERSION_MAJOR}${PYTHON_VERSION_MINOR} thread filesystem iostreams regex serialization system date_time REQUIRED)
 
 INCLUDE_DIRECTORIES (${Boost_INCLUDE_DIRS})
 # for checking purpose
