[Python3] Fixes to pass checks (import errors and fix _packPredicates to fit new pygts)

--- a/core/main/main.py.in
+++ b/core/main/main.py.in
@@ -151,7 +151,7 @@ if opts.updateScripts:
 sys.argv=yade.runtime.argv=args
 yade.runtime.opts=opts
 
-from yade import utils, pack
+from yade import utils, pack, geom
 from yade.utils import *
 from yade.pack import *
 from math import *
