--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,9 @@
 image: registry.gitlab.com/yade-dev/docker-yade
+
+before_script:
+    - apt-get update
+    - apt-get  -y  install python-future python3-future python3-numpy python3-dev python3-matplotlib python3-numpy python3-tk python-vtk6 python3-pygraphviz python3-xlib python3-pyqt5 python3-pyqt5.qtwebkit python3-pyqt5.qtsvg python3-pil python3-sphinx python3-git python3-minieigen
+
 stages:
   - cmake
   - build
@@ -12,8 +17,6 @@ cmake:
     - master
     - merge_request
   script:
-    - apt-get update
-    - apt-get  -y  install python-future python3-future python3-numpy python3-dev python3-matplotlib python3-numpy python3-tk python-vtk6 python3-pygraphviz python3-xlib python3-pyqt5 python3-pyqt5.qtwebkit python3-pyqt5.qtsvg python3-pil python3-sphinx python3-git python3-minieigen
     - mkdir build && cd build
     - cmake -DSUFFIX=-ci -DCMAKE_VERBOSE_MAKEFILE=ON -DCMAKE_INSTALL_PREFIX=../install -DDISABLE_SAVE_TEMPS=1 ..
   tags:
