--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ image: registry.gitlab.com/yade-dev/docker-yade
 
 before_script:
     - apt-get update
-    - apt-get  -y  install python-future python3-future python3-numpy python3-dev python3-matplotlib python3-numpy python3-tk python-vtk6 python3-pygraphviz python3-xlib python3-pyqt5 python3-pyqt5.qtwebkit python3-pyqt5.qtsvg python3-pil python3-sphinx python3-git python3-minieigen
+    - apt-get  -y  install python-future python3-future python3-numpy python3-dev python3-matplotlib python3-tk python-vtk6 python3-pygraphviz python3-xlib python3-pyqt5 python3-pyqt5.qtwebkit python3-pyqt5.qtsvg python3-pil python3-sphinx python3-git python3-minieigen python3-ipython
 
 stages:
   - cmake
