ENABLE_FOAMCOUPLING to ENABLE_MPI

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -385,7 +385,7 @@ IF(ENABLE_MPI)
     MESSAGE(STATUS "MPI NOT FOUND, YADE-OpenFOAM coupling disabled")
     SET (DISABLED_FEATS "${DISABLED_FEATS} MPI")
   ENDIF(MPI_FOUND)
-ELSE(ENABLE_FOAMCOUPLING)
+ELSE(ENABLE_MPI)
     SET (DISABLED_FEATS "${DISABLED_FEATS} MPI")
 ENDIF(ENABLE_MPI)
 #===============================================
