--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -70,7 +70,7 @@ doc:
     - merge_request
   script:
     - cd build
-    - xvfb-run -s "-screen 0 1600x1200x24" make doc
+    - xvfb-run -s "-screen 0 1600x1200x24" make -i doc
   dependencies:
     - cmake
     - make
