--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,8 @@ cmake:
   script:
     - mkdir build && cd build
     - cmake -DSUFFIX=-ci -DCMAKE_VERBOSE_MAKEFILE=ON -DCMAKE_INSTALL_PREFIX=../install -DDISABLE_SAVE_TEMPS=1 ..
+  tags:
+  - lightweight
   artifacts:
     paths:
       - build
@@ -41,6 +43,8 @@ test:
     - merge_request
   script:
     - install/bin/yade-ci --test
+  tags:
+  - lightweight
   dependencies:
     - make
 
@@ -51,6 +55,8 @@ check:
     - merge_request
   script:
     - install/bin/yade-ci --checks
+  tags:
+  - lightweight
   dependencies:
     - make
 
@@ -65,6 +71,8 @@ doc:
   dependencies:
     - cmake
     - make
+  tags:
+  - lightweight
   artifacts:
     paths:
       - install
@@ -79,6 +87,8 @@ pages:
     - mv install/share/doc/yade-ci/Yade.epub public
   dependencies:
     - doc
+  tags:
+  - lightweight
   artifacts:
     paths:
       - public
