[Python3] Change cmake behavior for python version:
- add -DPYTHON_VERSION which defaults to -1
- if -DPYTHON_VERSION==-1 then python will be last version found on the system
- if -DPYTHON_VERSION if a version number, then force it.

Also try to find basic python packages in cmake to be more explicit for users

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,9 +14,7 @@ cmake:
     - merge_request
   script:
     - mkdir build && cd build
-    - cmake -DSUFFIX=-ci -DCMAKE_VERBOSE_MAKEFILE=ON -DCMAKE_INSTALL_PREFIX=../install -DDISABLE_SAVE_TEMPS=1 ..
-  tags:
-  - lightweight
+    - cmake -DSUFFIX=-ci -DCMAKE_VERBOSE_MAKEFILE=ON -DCMAKE_INSTALL_PREFIX=../install -DPYTHON_VERSION=3 -DDISABLE_SAVE_TEMPS=1 ..
   artifacts:
     paths:
       - build
